tests/bad/enum_duplicate_fields.oc
/// fail: Duplicate enum variant: Beta

enum Foo {
    Alpha
    Beta
    Gamma
    Beta
}